# CocoonBreak

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md  tauri.conf.json
src/: bilibili.rs  browser.rs  commands.rs  lib.rs  llm.rs  main.rs  models.rs
